# ShittyGameEngine

./: CMakeLists.txt  Game.h  dev.txt  game.cpp  game.h  game_object.cpp  game_object.h  game_state.h  game_state_machine.cpp  game_state_machine.h  input_handler.cpp  input_handler.h  main.cpp  menu_button.cpp  menu_button.h  menu_state.cpp  menu_state.h  object_load_parameters.cpp  object_load_parameters.h  play_state.cpp  play_state.h  player.cpp  player.h  sdl_game_object.cpp  sdl_game_object.h  texture_manager.cpp  texture_manager.h  vector_2d.cpp  vector_2d.h
